made bg fixed and no longer cover, testing to see if it works on mobile chrome

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,12 +22,13 @@ html {
     color: #333;
     font-family: $roboto;
     font-size: 16px;
-    // height: 100%;
-    // min-height: 100%;
+    background-image: url(../images/ulimpik-naashinul-park-2560w.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: auto 100%;
 }
 body{
-    background: url(../images/ulimpik-naashinul-park-2560w.jpg) no-repeat center center;
-    background-size: cover;
     display: flex;
     flex-direction: column;
     min-height: 99vh;
